[gd_scene load_steps=5 format=2]

[ext_resource path="res://maps/door/door.gd" type="Script" id=1]
[ext_resource path="res://maps/door/assets/332963__brutavious08__doorlocked.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 16 )

[node name="Door" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Reach" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reach"]
position = Vector2( 0, 48 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
[connection signal="mouse_entered" from="." to="." method="_on_Portal_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Portal_mouse_exited"]
[connection signal="body_entered" from="Reach" to="." method="_on_Reach_body_entered"]
[connection signal="body_exited" from="Reach" to="." method="_on_Reach_body_exited"]
